--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^6.0.3",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "fullcalendar": "^3.10.0",
     "jquery": "^3.3.1",
     "rxjs": "6.3.3",
+    "toastr": "^2.1.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
